--- a/index.html
+++ b/index.html
@@ -1,3 +1,28 @@
 <html>
-<h1>Testing</h1>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ryan Ferguson, PE - Electrical/Controls Engineer</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+    <body>
+<NavLink to={`/players/${row.nflid}`}>
+      <div class="wrapper" style={{backgroundColor: `${row.backgroundColor}`}}>
+        <div className="box_img">
+          <img src={require(`../images/${row.acronym}.svg`)} alt={`${row.acronym} Logo`} width={100} height={100}></img>
+          </div> 
+        <div class="flex-container">
+          <h2 className="teamName">{row.displayName}  {row.position}</h2>
+          <span class="a">Total Fantasy Points: {row.stdFantasy.toFixed(2)}</span>
+          <span class="a">Total Passing Touchdowns: {row.passTDs}</span>
+          <span class="a">Total Recieving Touchdowns: {row.recTDs}</span>
+          <span class="a">Total Rushing Touchdowns: {row.rushTDs}</span>
+          <span class="a">Total Interceptions: {row.intercept}</span>
+          <span class="a">Total Fumbles Lost: {row.fumblesLost}</span>
+        </div>
+  </div></NavLink>
+      </body>
+
 </html>
