--- a/test.html
+++ b/test.html
@@ -9,18 +9,18 @@
 </head>
     <body>
 <NavLink to={`/players/${row.nflid}`}>
-      <div class="wrapper" style={{backgroundColor: `${row.backgroundColor}`}}>
+      <div class="wrapper" style={{backgroundColor: `#000`}}>
         <div className="box_img">
-          <img src={require(`../images/${row.acronym}.svg`)} alt={`${row.acronym} Logo`} width={100} height={100}></img>
+          <img src={require(`PIT.svg`)} alt={PIT Logo`} width={100} height={100}></img>
           </div> 
         <div class="flex-container">
-          <h2 className="teamName">{row.displayName}  {row.position}</h2>
-          <span class="a">Total Fantasy Points: {row.stdFantasy.toFixed(2)}</span>
-          <span class="a">Total Passing Touchdowns: {row.passTDs}</span>
-          <span class="a">Total Recieving Touchdowns: {row.recTDs}</span>
-          <span class="a">Total Rushing Touchdowns: {row.rushTDs}</span>
-          <span class="a">Total Interceptions: {row.intercept}</span>
-          <span class="a">Total Fumbles Lost: {row.fumblesLost}</span>
+          <h2 className="teamName">Pittsburg Steelers</h2>
+          <span class="a">Total Fantasy Points: 1050.20</span>
+          <span class="a">Total Passing Touchdowns: 30</span>
+          <span class="a">Total Recieving Touchdowns: 20</span>
+          <span class="a">Total Rushing Touchdowns: 20</span>
+          <span class="a">Total Interceptions: 1</span>
+          <span class="a">Total Fumbles Lost: 2</span>
         </div>
   </div></NavLink>
       </body>
