--- a/test.html
+++ b/test.html
@@ -8,13 +8,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
     <body>
-<NavLink to={`/players/${row.nflid}`}>
-      <div class="wrapper" style={{backgroundColor: `#000`}}>
-        <div className="box_img">
-          <img src={require(`PIT.svg`)} alt={PIT Logo`} width={100} height={100}></img>
-          </div> 
+
+        
+      <div class="wrapper" style="background:#000">
+        <div class="box_img">
+          <img src="PIT.svg" alt="PIT Logo"></img>
+        </div> 
         <div class="flex-container">
-          <h2 className="teamName">Pittsburg Steelers</h2>
+          <h2 class="teamName">Pittsburgh Steelers</h2>
           <span class="a">Total Fantasy Points: 1050.20</span>
           <span class="a">Total Passing Touchdowns: 30</span>
           <span class="a">Total Recieving Touchdowns: 20</span>
@@ -22,6 +23,8 @@
           <span class="a">Total Interceptions: 1</span>
           <span class="a">Total Fumbles Lost: 2</span>
         </div>
-  </div></NavLink>
+  </div>
       </body>
 </html>
+
+width=100px height=100px
