--- a/test.html
+++ b/test.html
@@ -23,7 +23,22 @@
           <span class="a">Total Interceptions: 1</span>
           <span class="a">Total Fumbles Lost: 2</span>
         </div>
-  </div>
+      </div>
+      <div class="wrapper" style="background:#000">
+        <div class="box_img">
+          <img src="PIT.svg" alt="PIT Logo"></img>
+        </div> 
+        <div class="flex-container">
+          <h2 class="teamName">Pittsburgh Steelers</h2>
+          <span class="a">Total Fantasy Points: 1050.20</span>
+          <span class="a">Total Passing Touchdowns: 30</span>
+          <span class="a">Total Recieving Touchdowns: 20</span>
+          <span class="a">Total Rushing Touchdowns: 20</span>
+          <span class="a">Total Interceptions: 1</span>
+          <span class="a">Total Fumbles Lost: 2</span>
+        </div>
+      </div>
+
       </body>
 </html>
 
